--- a/Convenience_POS_System/src/main/resources/templates/member/loginForm.html
+++ b/Convenience_POS_System/src/main/resources/templates/member/loginForm.html
@@ -56,6 +56,7 @@
                 <label for="exampleInputPassword1" class="form-label">Password</label>
                 <input type="password" name="password" class="form-control" id="exampleInputPassword1">
             </div>
+            <input type="text" name="redirectURL" class="form-control" id="redirectURL" th:value="${url}" hidden>
             <div class="mb-3 form-check">
                 <a href="/member/signup">계정이 없으신가요? 회원가입을 하세요!</a>
             </div>
