--- a/Convenience_POS_System/src/main/resources/templates/statistics/statistics.html
+++ b/Convenience_POS_System/src/main/resources/templates/statistics/statistics.html
@@ -566,8 +566,10 @@
     <th:block th:replace="fragments/navbar :: navbarFragment"></th:block>
 
     <div id="chartContent">
+        <br>
         <div class="row">
             <div class="col" align="center">
+                <h3><strong>일별 판매량</strong></h3>
                 <div id="piechart1" style="width: 100%; height: 500px;"></div>
                 <input type="date" id="QuantityDay">
                 <button onclick="updateChart_quantity_per_day()" class="btn btn-primary">조회하기</button>
@@ -575,6 +577,7 @@
                 <div id="table_div1"></div>
             </div>
             <div class="col" align="center">
+                <h3><strong>주별 판매량</strong></h3>
                 <div id="piechart2" style="width: 100%; height: 500px;"></div>
                 <input type="week" id="QuantityWeek">
                 <button onclick="updateChart_quantity_per_week()" class="btn btn-primary">조회하기</button>
@@ -582,6 +585,7 @@
                 <div id="table_div2"></div>
             </div>
             <div class="col" align="center">
+                <h3><strong>월별 판매량</strong></h3>
                 <div id="piechart3" style="width: 100%; height: 500px;"></div>
                 <input type="month" id="QuantityMonth">
                 <button onclick="updateChart_quantity_per_month()" class="btn btn-primary">조회하기</button>
@@ -591,7 +595,9 @@
         </div>
         <hr>
         <div class="row">
+            <br>
             <div class="col" align="center">
+                <h3><strong>일별 판매액</strong></h3>
                 <div id="piechart4" style="width: 100%; height: 500px;"></div>
                 <input type="date" id="PriceDay">
                 <button onclick="updateChart_price_per_day()" class="btn btn-primary">조회하기</button>
@@ -599,6 +605,7 @@
                 <div id="table_div4"></div>
             </div>
             <div class="col" align="center">
+                <h3><strong>주별 판매액</strong></h3>
                 <div id="piechart5" style="width: 100%; height: 500px;"></div>
                 <input type="week" id="PriceWeek">
                 <button onclick="updateChart_price_per_week()" class="btn btn-primary">조회하기</button>
@@ -606,6 +613,7 @@
                 <div id="table_div5"></div>
             </div>
             <div class="col" align="center">
+                <h3><strong>월별 판매액</strong></h3>
                 <div id="piechart6" style="width: 100%; height: 500px;"></div>
                 <input type="month" id="PriceMonth">
                 <button onclick="updateChart_price_per_month()" class="btn btn-primary">조회하기</button>
@@ -624,6 +632,7 @@
                 <thead>
                 <tr>
                     <th>판매 ID</th>
+                    <th>계산직원 ID</th>
                     <th>총 판매 가격</th>
                     <th>시간</th>
                     <th>상세조회</th>
@@ -632,6 +641,12 @@
                 <tbody>
                 <tr th:each="sale : ${sales}">
                     <th th:text="${sale.getId()}"/>
+                    <th:block th:if="${sale.getMid() eq loginMember.getId()}">
+                        <td><strong th:text="${sale.getMid()}"></strong><span class="badge rounded-pill bg-success">현재계정</span></td>
+                    </th:block>
+                    <th:block th:unless="${sale.getMid() eq loginMember.getId()}">
+                        <td><strong th:text="${sale.getMid()}"></strong></td>
+                    </th:block>
                     <th th:text="${sale.getPrice()}"/>
                     <th th:text="${sale.getDatetime()}"/>
                     <td><a th:href="@{/statistics/sale/{saleId}(saleId=${sale.getId()})}" th:text="상세보기">상세보기</a></td>
