--- a/Convenience_POS_System/src/main/resources/templates/fragments/footer.html
+++ b/Convenience_POS_System/src/main/resources/templates/fragments/footer.html
@@ -21,7 +21,7 @@
 <!-- Footer-->
 <th:block th:fragment="footerFragment">
 <footer class="py-5 bg-dark">
-    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; POS SYSTEM Website 2022</p></div>
 </footer>
 </th:block>
 </body>
