--- a/Convenience_POS_System/src/main/resources/templates/product/productList.html
+++ b/Convenience_POS_System/src/main/resources/templates/product/productList.html
@@ -68,7 +68,7 @@
                     <th:block th:unless="${product.getSell() eq 1}">
                         <td><span class="badge rounded-pill bg-danger">판매중지</span></td>
                     </th:block>
-                    <td><a th:href="@{/product/list/{productId}(productId=${product.getId()})}" th:text="변경이록상세정보">변경이록 상세정보</a></td>
+                    <td><a th:href="@{/product/list/{productId}(productId=${product.getId()})}" th:text="변경이력상세정보">변경이력 상세정보</a></td>
                 </tr>
                 </tbody>
 
