--- a/Convenience_POS_System/src/main/resources/templates/sale/sale.html
+++ b/Convenience_POS_System/src/main/resources/templates/sale/sale.html
@@ -88,7 +88,7 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="staticBackdropLabel">취소</h5>
+                                <h5 class="modal-title" id="staticBackdropLabel">계산확인</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
