--- a/Convenience_POS_System/src/main/resources/templates/product/updateProductForm.html
+++ b/Convenience_POS_System/src/main/resources/templates/product/updateProductForm.html
@@ -13,27 +13,31 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/bootstrap/css/styles.css" rel="stylesheet"/>
     <style>
-        body, html{
+        body, html {
             margin: 0;
             padding: 0;
             height: 100%;
         }
+
         #body-wrapper {
             min-height: 100%;
             position: relative;
         }
-        #content{
+
+        #content {
             margin-left: 10%;
             margin-right: 10%;
             margin-top: 100px;
             padding-bottom: 300px;
         }
+
         .field-error {
             border-color: #dc3545;
             color: #dc3545;
             padding-left: 0.75rem;
         }
-        .msg{
+
+        .msg {
             text-align: center;
         }
     </style>
@@ -51,20 +55,24 @@
 
         <div class="container">
             <h4 class="mb-3">제품 정보 입력</h4>
-            <form action="/product/update/" method="post">
-                <input type="text" class="form-control" id="sell" name="sell" readonly hidden th:value="${product.getSell()}">
+            <form action="/product/update/" method="post" onsubmit="return checkPrice()" name="updateForm">
+                <input type="text" class="form-control" id="sell" name="sell" readonly hidden
+                       th:value="${product.getSell()}">
                 <input type="text" class="form-control" id="id" name="id" readonly hidden th:value="${product.getId()}">
-                <input type="text" class="form-control" id="quantity" name="quantity" readonly hidden th:value="${product.getQuantity()}">
+                <input type="text" class="form-control" id="quantity" name="quantity" readonly hidden
+                       th:value="${product.getQuantity()}">
                 <div class="row mb-3">
                     <label for="code" class="col-sm-2 col-form-label">코드</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="code" name="code" readonly th:value="${product.getCode()}">
+                        <input type="text" class="form-control" id="code" name="code" readonly
+                               th:value="${product.getCode()}">
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label for="name" class="col-sm-2 col-form-label">제품명</label>
                     <div class="col-sm-10">
-                        <input type="text" th:class="${errors?.containsKey('email')} ? 'form-control field-error' : 'form-control'"
+                        <input type="text"
+                               th:class="${errors?.containsKey('email')} ? 'form-control field-error' : 'form-control'"
                                class="form-control" id="name" name="name" th:value="${product.getName()}">
                     </div>
                     <div class="field-error msg" th:if="${errors?.containsKey('name')}"
@@ -75,7 +83,8 @@
                 <div class="row mb-3">
                     <label for="price" class="col-sm-2 col-form-label">가격</label>
                     <div class="col-sm-10">
-                        <input type="text" th:class="${errors?.containsKey('email')} ? 'form-control field-error' : 'form-control'"
+                        <input type="text"
+                               th:class="${errors?.containsKey('email')} ? 'form-control field-error' : 'form-control'"
                                class="form-control" id="price" name="price" th:value="${product.getPrice()}">
                     </div>
                     <div class="field-error msg" th:if="${errors?.containsKey('price')}"
@@ -83,6 +92,7 @@
                         가격 오류
                     </div>
                 </div>
+                <div id="liveAlertPlaceholder"></div>
                 <button type="submit" class="btn btn-primary">제품 수정</button>
             </form>
         </div>
@@ -93,8 +103,32 @@
     <th:block th:replace="fragments/footer :: footerFragment"></th:block>
 </div>
 
+<script>
+    var alertPlaceholder = document.getElementById('liveAlertPlaceholder')
+    var alertTrigger = document.getElementById('liveAlertBtn')
+
+    function alert(message, type) {
+        var wrapper = document.createElement('div')
+        wrapper.innerHTML = '<div class="alert alert-' + type + ' alert-dismissible" role="alert">' + message + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>'
+
+        alertPlaceholder.append(wrapper)
+    }
 
 
+    function checkPrice(){
+        var form = document.updateForm;
+
+        if(form.price.value.length==0){
+            alert('가격은 필수 입력 항목입니다.', 'danger');
+            form.price.select();
+            return false;
+        }
+        else{
+            form.submit();
+        }
+
+    }
+</script>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
